trabalho/trabalho-laboratorial-grupo_62/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from Parser.y
-----------------------------------------------------------------------------

state 86 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Funcs                             (0)
	Funcs -> Func                                      (1)
	Funcs -> Func Funcs                                (2)
	Func -> Types id '(' Args ')' Stmt                 (3)
	Args ->                                            (4)
	Args -> Types id                                   (5)
	Args -> Types id ',' Args                          (6)
	Block -> Stmt                                      (7)
	Block -> Block Stmt                                (8)
	Stmt -> id '=' Exp                                 (9)
	Stmt -> Simple ';'                                 (10)
	Stmt -> Exp ';'                                    (11)
	Stmt -> '{' Block '}'                              (12)
	Stmt -> if '(' Exp ')' Stmt else Stmt              (13)
	Stmt -> if '(' Exp ')' Stmt                        (14)
	Stmt -> while '(' Exp ')' Stmt                     (15)
	Stmt -> return Exp ';'                             (16)
	Stmt -> print_int '(' Exp ')' ';'                  (17)
	Stmt -> scan_int '(' Exp ')' ';'                   (18)
	Simple -> Types id                                 (19)
	Types -> int                                       (20)
	Types -> bool                                      (21)
	Exp -> num                                         (22)
	Exp -> true                                        (23)
	Exp -> false                                       (24)
	Exp -> Exp '+' Exp                                 (25)
	Exp -> Exp '-' Exp                                 (26)
	Exp -> Exp '*' Exp                                 (27)
	Exp -> Exp '/' Exp                                 (28)
	Exp -> Exp '%' Exp                                 (29)
	Exp -> Exp "==" Exp                                (30)
	Exp -> Exp "!=" Exp                                (31)
	Exp -> Exp '<' Exp                                 (32)
	Exp -> Exp "<=" Exp                                (33)
	Exp -> Exp '>' Exp                                 (34)
	Exp -> Exp ">=" Exp                                (35)
	Exp -> '(' Exp ')'                                 (36)
	Exp -> '!' Exp                                     (37)
	Exp -> Exp "&&" Exp                                (38)
	Exp -> Exp "||" Exp                                (39)
	Exp -> id                                          (40)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	';'            { TokenSEMICOLON }
	','            { TokenCOMMA }
	'+'            { TokenADD }
	'-'            { TokenSUB }
	'*'            { TokenMULT }
	'/'            { TokenDIV }
	'%'            { TokenMOD }
	"=="           { TokenEQUAL }
	"!="           { TokenNEQUAL }
	'<'            { TokenLESS }
	"<="           { TokenLESSEQ }
	'>'            { TokenGREATER }
	">="           { TokenGREATEREQ }
	'('            { TokenLPAREN }
	')'            { TokenRPAREN }
	'{'            { TokenLBRACE }
	'}'            { TokenRBRACE }
	'='            { TokenASSIGN }
	'!'            { TokenNot }
	"&&"           { TokenAND }
	"||"           { TokenOR }
	if             { TokenIF }
	else           { TokenELSE }
	while          { TokenWHILE }
	return         { TokenRETURN }
	int            { TokenInt }
	num            { TokenNum $$ }
	bool           { TokenBool $$ }
	true           { TokenTrue }
	false          { TokenFalse }
	print_int      { TokenPrint }
	scan_int       { TokenScan }
	id             { TokenIdent $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Funcs           rules 1, 2
	Func            rule  3
	Args            rules 4, 5, 6
	Block           rules 7, 8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18
	Simple          rule  19
	Types           rules 20, 21
	Exp             rules 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	int            shift, and enter state 4
	bool           shift, and enter state 5

	Funcs          goto state 6
	Func           goto state 7
	Types          goto state 3

State 1


	int            shift, and enter state 4
	bool           shift, and enter state 5

	Func           goto state 2
	Types          goto state 3

State 2

	Funcs -> Func .                                     (rule 1)



State 3

	Func -> Types . id '(' Args ')' Stmt                (rule 3)

	id             shift, and enter state 9


State 4

	Types -> int .                                      (rule 20)

	id             reduce using rule 20


State 5

	Types -> bool .                                     (rule 21)

	id             reduce using rule 21


State 6

	%start_parser -> Funcs .                            (rule 0)

	%eof           accept


State 7

	Funcs -> Func .                                     (rule 1)
	Funcs -> Func . Funcs                               (rule 2)

	int            shift, and enter state 4
	bool           shift, and enter state 5
	%eof           reduce using rule 1

	Funcs          goto state 8
	Func           goto state 7
	Types          goto state 3

State 8

	Funcs -> Func Funcs .                               (rule 2)

	%eof           reduce using rule 2


State 9

	Func -> Types id . '(' Args ')' Stmt                (rule 3)

	'('            shift, and enter state 10


State 10

	Func -> Types id '(' . Args ')' Stmt                (rule 3)

	')'            reduce using rule 4
	int            shift, and enter state 4
	bool           shift, and enter state 5

	Args           goto state 11
	Types          goto state 12

State 11

	Func -> Types id '(' Args . ')' Stmt                (rule 3)

	')'            shift, and enter state 14


State 12

	Args -> Types . id                                  (rule 5)
	Args -> Types . id ',' Args                         (rule 6)

	id             shift, and enter state 13


State 13

	Args -> Types id .                                  (rule 5)
	Args -> Types id . ',' Args                         (rule 6)

	','            shift, and enter state 31
	')'            reduce using rule 5


State 14

	Func -> Types id '(' Args ')' . Stmt                (rule 3)

	'('            shift, and enter state 19
	'{'            shift, and enter state 20
	'!'            shift, and enter state 21
	if             shift, and enter state 22
	while          shift, and enter state 23
	return         shift, and enter state 24
	int            shift, and enter state 4
	num            shift, and enter state 25
	bool           shift, and enter state 5
	true           shift, and enter state 26
	false          shift, and enter state 27
	print_int      shift, and enter state 28
	scan_int       shift, and enter state 29
	id             shift, and enter state 30

	Stmt           goto state 15
	Simple         goto state 16
	Types          goto state 17
	Exp            goto state 18

State 15

	Func -> Types id '(' Args ')' Stmt .                (rule 3)

	int            reduce using rule 3
	bool           reduce using rule 3
	%eof           reduce using rule 3


State 16

	Stmt -> Simple . ';'                                (rule 10)

	';'            shift, and enter state 59


State 17

	Simple -> Types . id                                (rule 19)

	id             shift, and enter state 58


State 18

	Stmt -> Exp . ';'                                   (rule 11)
	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)

	';'            shift, and enter state 44
	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'%'            shift, and enter state 49
	"=="           shift, and enter state 50
	"!="           shift, and enter state 51
	'<'            shift, and enter state 52
	"<="           shift, and enter state 53
	'>'            shift, and enter state 54
	">="           shift, and enter state 55
	"&&"           shift, and enter state 56
	"||"           shift, and enter state 57


State 19

	Exp -> '(' . Exp ')'                                (rule 36)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 43

State 20

	Stmt -> '{' . Block '}'                             (rule 12)

	'('            shift, and enter state 19
	'{'            shift, and enter state 20
	'!'            shift, and enter state 21
	if             shift, and enter state 22
	while          shift, and enter state 23
	return         shift, and enter state 24
	int            shift, and enter state 4
	num            shift, and enter state 25
	bool           shift, and enter state 5
	true           shift, and enter state 26
	false          shift, and enter state 27
	print_int      shift, and enter state 28
	scan_int       shift, and enter state 29
	id             shift, and enter state 30

	Block          goto state 41
	Stmt           goto state 42
	Simple         goto state 16
	Types          goto state 17
	Exp            goto state 18

State 21

	Exp -> '!' . Exp                                    (rule 37)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 40

State 22

	Stmt -> if . '(' Exp ')' Stmt else Stmt             (rule 13)
	Stmt -> if . '(' Exp ')' Stmt                       (rule 14)

	'('            shift, and enter state 39


State 23

	Stmt -> while . '(' Exp ')' Stmt                    (rule 15)

	'('            shift, and enter state 38


State 24

	Stmt -> return . Exp ';'                            (rule 16)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 36

State 25

	Exp -> num .                                        (rule 22)

	';'            reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'*'            reduce using rule 22
	'/'            reduce using rule 22
	'%'            reduce using rule 22
	"=="           reduce using rule 22
	"!="           reduce using rule 22
	'<'            reduce using rule 22
	"<="           reduce using rule 22
	'>'            reduce using rule 22
	">="           reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	'!'            reduce using rule 22
	"&&"           reduce using rule 22
	"||"           reduce using rule 22
	if             reduce using rule 22
	else           reduce using rule 22
	while          reduce using rule 22
	return         reduce using rule 22
	int            reduce using rule 22
	num            reduce using rule 22
	bool           reduce using rule 22
	true           reduce using rule 22
	false          reduce using rule 22
	print_int      reduce using rule 22
	scan_int       reduce using rule 22
	id             reduce using rule 22
	%eof           reduce using rule 22


State 26

	Exp -> true .                                       (rule 23)

	';'            reduce using rule 23
	'+'            reduce using rule 23
	'-'            reduce using rule 23
	'*'            reduce using rule 23
	'/'            reduce using rule 23
	'%'            reduce using rule 23
	"=="           reduce using rule 23
	"!="           reduce using rule 23
	'<'            reduce using rule 23
	"<="           reduce using rule 23
	'>'            reduce using rule 23
	">="           reduce using rule 23
	'('            reduce using rule 23
	')'            reduce using rule 23
	'{'            reduce using rule 23
	'}'            reduce using rule 23
	'!'            reduce using rule 23
	"&&"           reduce using rule 23
	"||"           reduce using rule 23
	if             reduce using rule 23
	else           reduce using rule 23
	while          reduce using rule 23
	return         reduce using rule 23
	int            reduce using rule 23
	num            reduce using rule 23
	bool           reduce using rule 23
	true           reduce using rule 23
	false          reduce using rule 23
	print_int      reduce using rule 23
	scan_int       reduce using rule 23
	id             reduce using rule 23
	%eof           reduce using rule 23


State 27

	Exp -> false .                                      (rule 24)

	';'            reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'*'            reduce using rule 24
	'/'            reduce using rule 24
	'%'            reduce using rule 24
	"=="           reduce using rule 24
	"!="           reduce using rule 24
	'<'            reduce using rule 24
	"<="           reduce using rule 24
	'>'            reduce using rule 24
	">="           reduce using rule 24
	'('            reduce using rule 24
	')'            reduce using rule 24
	'{'            reduce using rule 24
	'}'            reduce using rule 24
	'!'            reduce using rule 24
	"&&"           reduce using rule 24
	"||"           reduce using rule 24
	if             reduce using rule 24
	else           reduce using rule 24
	while          reduce using rule 24
	return         reduce using rule 24
	int            reduce using rule 24
	num            reduce using rule 24
	bool           reduce using rule 24
	true           reduce using rule 24
	false          reduce using rule 24
	print_int      reduce using rule 24
	scan_int       reduce using rule 24
	id             reduce using rule 24
	%eof           reduce using rule 24


State 28

	Stmt -> print_int . '(' Exp ')' ';'                 (rule 17)

	'('            shift, and enter state 35


State 29

	Stmt -> scan_int . '(' Exp ')' ';'                  (rule 18)

	'('            shift, and enter state 34


State 30

	Stmt -> id . '=' Exp                                (rule 9)
	Exp -> id .                                         (rule 40)

	';'            reduce using rule 40
	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'/'            reduce using rule 40
	'%'            reduce using rule 40
	"=="           reduce using rule 40
	"!="           reduce using rule 40
	'<'            reduce using rule 40
	"<="           reduce using rule 40
	'>'            reduce using rule 40
	">="           reduce using rule 40
	'='            shift, and enter state 33
	"&&"           reduce using rule 40
	"||"           reduce using rule 40


State 31

	Args -> Types id ',' . Args                         (rule 6)

	')'            reduce using rule 4
	int            shift, and enter state 4
	bool           shift, and enter state 5

	Args           goto state 32
	Types          goto state 12

State 32

	Args -> Types id ',' Args .                         (rule 6)

	')'            reduce using rule 6


State 33

	Stmt -> id '=' . Exp                                (rule 9)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 81

State 34

	Stmt -> scan_int '(' . Exp ')' ';'                  (rule 18)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 80

State 35

	Stmt -> print_int '(' . Exp ')' ';'                 (rule 17)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 79

State 36

	Stmt -> return Exp . ';'                            (rule 16)
	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)

	';'            shift, and enter state 78
	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'%'            shift, and enter state 49
	"=="           shift, and enter state 50
	"!="           shift, and enter state 51
	'<'            shift, and enter state 52
	"<="           shift, and enter state 53
	'>'            shift, and enter state 54
	">="           shift, and enter state 55
	"&&"           shift, and enter state 56
	"||"           shift, and enter state 57


State 37

	Exp -> id .                                         (rule 40)

	';'            reduce using rule 40
	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'/'            reduce using rule 40
	'%'            reduce using rule 40
	"=="           reduce using rule 40
	"!="           reduce using rule 40
	'<'            reduce using rule 40
	"<="           reduce using rule 40
	'>'            reduce using rule 40
	">="           reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'{'            reduce using rule 40
	'}'            reduce using rule 40
	'!'            reduce using rule 40
	"&&"           reduce using rule 40
	"||"           reduce using rule 40
	if             reduce using rule 40
	else           reduce using rule 40
	while          reduce using rule 40
	return         reduce using rule 40
	int            reduce using rule 40
	num            reduce using rule 40
	bool           reduce using rule 40
	true           reduce using rule 40
	false          reduce using rule 40
	print_int      reduce using rule 40
	scan_int       reduce using rule 40
	id             reduce using rule 40
	%eof           reduce using rule 40


State 38

	Stmt -> while '(' . Exp ')' Stmt                    (rule 15)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 77

State 39

	Stmt -> if '(' . Exp ')' Stmt else Stmt             (rule 13)
	Stmt -> if '(' . Exp ')' Stmt                       (rule 14)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 76

State 40

	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> '!' Exp .                                    (rule 37)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)

	';'            reduce using rule 37
	'+'            reduce using rule 37
	'-'            reduce using rule 37
	'*'            reduce using rule 37
	'/'            reduce using rule 37
	'%'            reduce using rule 37
	"=="           reduce using rule 37
	"!="           reduce using rule 37
	'<'            reduce using rule 37
	"<="           reduce using rule 37
	'>'            reduce using rule 37
	">="           reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'{'            reduce using rule 37
	'}'            reduce using rule 37
	'!'            reduce using rule 37
	"&&"           reduce using rule 37
	"||"           reduce using rule 37
	if             reduce using rule 37
	else           reduce using rule 37
	while          reduce using rule 37
	return         reduce using rule 37
	int            reduce using rule 37
	num            reduce using rule 37
	bool           reduce using rule 37
	true           reduce using rule 37
	false          reduce using rule 37
	print_int      reduce using rule 37
	scan_int       reduce using rule 37
	id             reduce using rule 37
	%eof           reduce using rule 37


State 41

	Block -> Block . Stmt                               (rule 8)
	Stmt -> '{' Block . '}'                             (rule 12)

	'('            shift, and enter state 19
	'{'            shift, and enter state 20
	'}'            shift, and enter state 75
	'!'            shift, and enter state 21
	if             shift, and enter state 22
	while          shift, and enter state 23
	return         shift, and enter state 24
	int            shift, and enter state 4
	num            shift, and enter state 25
	bool           shift, and enter state 5
	true           shift, and enter state 26
	false          shift, and enter state 27
	print_int      shift, and enter state 28
	scan_int       shift, and enter state 29
	id             shift, and enter state 30

	Stmt           goto state 74
	Simple         goto state 16
	Types          goto state 17
	Exp            goto state 18

State 42

	Block -> Stmt .                                     (rule 7)

	'('            reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	'!'            reduce using rule 7
	if             reduce using rule 7
	while          reduce using rule 7
	return         reduce using rule 7
	int            reduce using rule 7
	num            reduce using rule 7
	bool           reduce using rule 7
	true           reduce using rule 7
	false          reduce using rule 7
	print_int      reduce using rule 7
	scan_int       reduce using rule 7
	id             reduce using rule 7


State 43

	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> '(' Exp . ')'                                (rule 36)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)

	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'%'            shift, and enter state 49
	"=="           shift, and enter state 50
	"!="           shift, and enter state 51
	'<'            shift, and enter state 52
	"<="           shift, and enter state 53
	'>'            shift, and enter state 54
	">="           shift, and enter state 55
	')'            shift, and enter state 73
	"&&"           shift, and enter state 56
	"||"           shift, and enter state 57


State 44

	Stmt -> Exp ';' .                                   (rule 11)

	'('            reduce using rule 11
	'{'            reduce using rule 11
	'}'            reduce using rule 11
	'!'            reduce using rule 11
	if             reduce using rule 11
	else           reduce using rule 11
	while          reduce using rule 11
	return         reduce using rule 11
	int            reduce using rule 11
	num            reduce using rule 11
	bool           reduce using rule 11
	true           reduce using rule 11
	false          reduce using rule 11
	print_int      reduce using rule 11
	scan_int       reduce using rule 11
	id             reduce using rule 11
	%eof           reduce using rule 11


State 45

	Exp -> Exp '+' . Exp                                (rule 25)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 72

State 46

	Exp -> Exp '-' . Exp                                (rule 26)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 71

State 47

	Exp -> Exp '*' . Exp                                (rule 27)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 70

State 48

	Exp -> Exp '/' . Exp                                (rule 28)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 69

State 49

	Exp -> Exp '%' . Exp                                (rule 29)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 68

State 50

	Exp -> Exp "==" . Exp                               (rule 30)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 67

State 51

	Exp -> Exp "!=" . Exp                               (rule 31)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 66

State 52

	Exp -> Exp '<' . Exp                                (rule 32)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 65

State 53

	Exp -> Exp "<=" . Exp                               (rule 33)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 64

State 54

	Exp -> Exp '>' . Exp                                (rule 34)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 63

State 55

	Exp -> Exp ">=" . Exp                               (rule 35)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 62

State 56

	Exp -> Exp "&&" . Exp                               (rule 38)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 61

State 57

	Exp -> Exp "||" . Exp                               (rule 39)

	'('            shift, and enter state 19
	'!'            shift, and enter state 21
	num            shift, and enter state 25
	true           shift, and enter state 26
	false          shift, and enter state 27
	id             shift, and enter state 37

	Exp            goto state 60

State 58

	Simple -> Types id .                                (rule 19)

	';'            reduce using rule 19


State 59

	Stmt -> Simple ';' .                                (rule 10)

	'('            reduce using rule 10
	'{'            reduce using rule 10
	'}'            reduce using rule 10
	'!'            reduce using rule 10
	if             reduce using rule 10
	else           reduce using rule 10
	while          reduce using rule 10
	return         reduce using rule 10
	int            reduce using rule 10
	num            reduce using rule 10
	bool           reduce using rule 10
	true           reduce using rule 10
	false          reduce using rule 10
	print_int      reduce using rule 10
	scan_int       reduce using rule 10
	id             reduce using rule 10
	%eof           reduce using rule 10


State 60

	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)
	Exp -> Exp "||" Exp .                               (rule 39)

	';'            reduce using rule 39
	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'%'            shift, and enter state 49
	"=="           shift, and enter state 50
	"!="           shift, and enter state 51
	'<'            shift, and enter state 52
	"<="           shift, and enter state 53
	'>'            shift, and enter state 54
	">="           shift, and enter state 55
	'('            reduce using rule 39
	')'            reduce using rule 39
	'{'            reduce using rule 39
	'}'            reduce using rule 39
	'!'            reduce using rule 39
	"&&"           shift, and enter state 56
	"||"           reduce using rule 39
	if             reduce using rule 39
	else           reduce using rule 39
	while          reduce using rule 39
	return         reduce using rule 39
	int            reduce using rule 39
	num            reduce using rule 39
	bool           reduce using rule 39
	true           reduce using rule 39
	false          reduce using rule 39
	print_int      reduce using rule 39
	scan_int       reduce using rule 39
	id             reduce using rule 39
	%eof           reduce using rule 39


State 61

	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp "&&" Exp .                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)

	';'            reduce using rule 38
	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'%'            shift, and enter state 49
	"=="           shift, and enter state 50
	"!="           shift, and enter state 51
	'<'            shift, and enter state 52
	"<="           shift, and enter state 53
	'>'            shift, and enter state 54
	">="           shift, and enter state 55
	'('            reduce using rule 38
	')'            reduce using rule 38
	'{'            reduce using rule 38
	'}'            reduce using rule 38
	'!'            reduce using rule 38
	"&&"           reduce using rule 38
	"||"           reduce using rule 38
	if             reduce using rule 38
	else           reduce using rule 38
	while          reduce using rule 38
	return         reduce using rule 38
	int            reduce using rule 38
	num            reduce using rule 38
	bool           reduce using rule 38
	true           reduce using rule 38
	false          reduce using rule 38
	print_int      reduce using rule 38
	scan_int       reduce using rule 38
	id             reduce using rule 38
	%eof           reduce using rule 38


State 62

	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> Exp ">=" Exp .                               (rule 35)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)

	';'            reduce using rule 35
	'+'            shift, and enter state 45
	'-'            shift, and enter state 46
	'*'            shift, and enter state 47
	'/'            shift, and enter state 48
	'%'            shift, and enter state 49
	"=="           reduce using rule 35
	"!="           reduce using rule 35
	'<'            reduce using rule 35
	"<="           reduce using rule 35
	'>'            reduce using rule 35
	">="           reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'{'            reduce using rule 35
	'}'            reduce using rule 35
	'!'            reduce using rule 35
	"&&"           reduce using rule 35
	"||"           reduce using rule 35
	if             reduce using rule 35
	else           reduce using rule 35
	while          reduce using rule 35
	return         reduce using rule 35
	int            reduce using rule 35
	num            reduce using rule 35
	bool           reduce using rule 35
	true           reduce using rule 35
	false          reduce using rule 35
	print_int      reduce using rule 35
	scan_int       reduce using rule 35
	id             reduce using rule 35
	%eof           reduce using rule 35


State 63

	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '%' Exp                                (rule 29)
	Exp -> Exp . "==" Exp                               (rule 30)
	Exp -> Exp . "!=" Exp                               (rule 31)
	Exp -> Exp . '<' Exp                                (rule 32)
	Exp -> Exp . "<=" Exp                               (rule 33)
	Exp -> Exp . '>' Exp                                (rule 34)
	Exp -> Exp '>' Exp .                                (rule 34)
	Exp -> Exp . ">=" Exp                               (rule 35)
	Exp -> Exp . "&&" Exp                               (rule 38)
	Exp -> Exp . "||" Exp                               (rule 39)
